--- a/react_image_finder/package.json
+++ b/react_image_finder/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://FanFanFantastic.github.io/React_ImageFinder",
   "name": "react_image_finder",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
+    "gh-pages": "^3.1.0",
     "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -14,6 +16,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
